# 3fs3

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
cmd/3fs-s3-gateway/: Cargo.toml
cmd/3fs-s3-gateway/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  lib.rs  mount.rs
crates/gateway/src/s3/: auth.rs  handlers.rs  mod.rs  models.rs  xml.rs
crates/gateway/src/storage/: mod.rs  posix.rs
deploy/examples/: awscli.sh
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
scripts/: dev-run.sh
