[workspace]
members = [
    "crates/gateway",
    "cmd/3fs-s3-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
axum = { version = "0.7", features = ["http1", "tokio"] }
tokio = { version = "1.39", features = ["full"] }
hyper = { version = "1.4", features = ["http1", "server", "client"] }
http = "1"
bytes = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "request-id", "util", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.31", features = ["serialize", "overlapped-lists"] }
thiserror = "1"
anyhow = "1"
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
percent-encoding = "2.3"
mime = "0.3"
mime_guess = "2.0"
fs-err = "2.11"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
prometheus = "0.13"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"
regex = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rustix = { version = "0.38", default-features = false, features = ["fs"] }
parking_lot = "0.12"
dashmap = "5"


